# IMS-project

./: .editorconfig  CMakeLists.txt  Makefile
include/: Args.h  BitMapWriter.h  CAutomata.h  Cell.h  Field.h  MagicConstants.h  Paper.h  PerlinNoise.h  ProgramWrapper.h  Util.h  util.h
include/models/: Cell.h  ComplexCell.h  CustomeCell.h  Paper.h  PaperCell.h  PaperMath.h  PaperType.h  SimpleCell.h
include/models/Complex/: ComplexCell.h
include/models/Custom/: CustomCell.h
include/models/Simple/: SimpleCell.h
include/models/complex/: ComplexPaper.h
include/models/custom/: CustomPaper.h
include/models/simple/: SimplePaper.h
include/output/: BitMapTypes.h  BitMapWriter.h
include/template/: CAutomata.h  Cell.h  Field.h  World.h
src/: Args.cpp  BitMapWriter.cpp  CAutomata.cpp  Cell.cpp  EntryMain.cpp  Field.cpp  Paper.cpp  PerlinNoise.cpp  ProgramWrapper.cpp  Util.cpp
src/models/: Cell.cpp  ComplexCell.cpp  CustomeCell.cpp  Paper.cpp  PaperCell.cpp  SimpleCell.cpp
src/models/Complex/: ComplexCell.cpp
src/models/Custome/: CustomeCell.cpp
src/models/Simple/: SimpleCell.cpp
src/models/complex/: ComplexPaper.cpp
src/models/custom/: CustomCell.cpp  CustomPaper.cpp
src/models/simple/: SimplePaper.cpp
src/output/: BitMapWriter.cpp
src/template/: CAutomata.cpp  Cell.cpp  Field.cpp  World.cpp
